--- a/single-project.html
+++ b/single-project.html
@@ -80,7 +80,6 @@
                             <ul>
                                 <li class="menu-item-has-children"><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -102,56 +101,47 @@
 
         </div>
     </div>
+
+    <!-- Project Header -->
     <div class="container">
-        <div class="single-project-slider">
-            <div class="owl-carousel single-slider">
-                <div><img class="img-responsive center-block" src="img/single-project/img_1.jpg" alt="slider"></div>
-                <div><img class="img-responsive center-block" src="img/single-project/img_1.jpg" alt="slider"></div>
-            </div>
-            <div class="single-controls">
-                <span class="arrow-left"><a class="prev-slide" href="javascript:void(0)"><i class="pe-7s-angle-left"></i></a></span>
-                <span class="arrow-right"><a class="next-slide" href="javascript:void(0)"><i class="pe-7s-angle-right"></i></a></span>
-            </div>
+        <div 
+            class="header-page ef-parallax-bg" 
+            style="background-image:url(img/portfolio-header.jpg)">
         </div>
     </div>
+
+    <!-- Project details -->
     <div class="container">
         <div class="single-portfolio-wrapper">
             <div class="row">
                 <div class="col-md-8 col-sm-8">
                     <h1>STYLE FASHION</h1>
                     <span class="info">NEW BAG & STYLE FASHION</span>
-                    <p>Idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure.Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a because it is pain, but because occasionally circumstances occur in which toil and pain can procure trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage.</p>
+                    <p>Idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure. To take a because it is pain, but because occasionally circumstances occur in which toil and pain can procure trivial example.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
                         <table class="table">
                             <tbody>
                                 <tr>
-                                    <td>Date:</td>
-                                    <td>01.09.2015</td>
-                                </tr>
-                                <tr>
-                                    <td>Client:</td>
-                                    <td>Envato</td>
+                                    <td>Visit:</td>
+                                    <td><a href="http://www.envato.com" target="_blank">envato.com</a></td>
                                 </tr>
                                 <tr>
                                     <td>Category:</td>
                                     <td>Fashion Design</td>
                                 </tr>
                                 <tr>
-                                    <td>Visit:</td>
-                                    <td><a href="http://www.envato.com" target="_blank">envato.com</a></td>
+                                    <td>Date:</td>
+                                    <td>01.09.2015</td>
                                 </tr>
                                 <tr>
                                     <td>Share:</td>
                                     <td>
                                         <ul class="social-buttons">
                                             <li><a href="javasript:void(0);" data-social="fb"><i class="iconmoon-facebook"></i></a></li>
-                                            <li>
-                                                <a href="javascript:void(0);" data-social="tw"> <i class="iconmoon-twitter"></i></a>
-                                            </li>
+                                            <li><a href="javascript:void(0);" data-social="tw"> <i class="iconmoon-twitter"></i></a></li>
                                             <li><a href="javascript:void(0);" data-social="pt"><i class="iconmoon-pinterest"></i></a></li>
-                                            <li><a href="javascript:void(0);" data-social="ln"><i class="iconmoon-linkedin"></i></a></li>
                                         </ul>
                                     </td>
                                 </tr>
@@ -185,11 +175,6 @@
     </div>
     <div class="container">
         <div class="portfolio-controls">
-            <div class="btn-project home-btn">
-                <a href="#" data-hover="Home">
-                    <i class="pe-7s-keypad"></i>
-                </a>
-            </div>
             <div class="btn-project forward-btn">
                 <a href="#" data-hover="Next">
                     <i class="pe-7s-angle-right right"></i>
@@ -199,70 +184,6 @@
                 <a href="#" data-hover="Previous">
                     <i class="pe-7s-angle-left left"></i>
                 </a>
-            </div>
-        </div>
-    </div>
-    <div class="container margin-top">
-        <div class="similar-project">
-            <h4>Similar Projects</h4>
-            <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="img">
-                        <img src="img/home-portfolio/img_6.jpg" alt="Portfolio Item">
-                        <div class="overlay-thumb">
-                            <a href="javascript:void(0)" class="like-product">
-                                <i class="ion-ios-heart-outline"></i>
-                                <span class="like-product">Liked</span>
-                                <span class="output">256</span>
-                            </a>
-                            <div class="details">
-                                <span class="title">STYLE FASHION</span>
-                                <span class="info">NEW BAG & STYLE FASHION</span>
-                            </div>
-                            <span class="btnBefore"></span>
-                            <span class="btnAfter"></span>
-                            <a class="main-portfolio-link" href="single-project.html"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="img">
-                        <img src="img/home-portfolio/img_7.jpg" alt="Portfolio Item">
-                        <div class="overlay-thumb">
-                            <a href="javascript:void(0)" class="like-product">
-                                <i class="ion-ios-heart-outline"></i>
-                                <span class="like-product">Liked</span>
-                                <span class="output">256</span>
-                            </a>
-                            <div class="details">
-                                <span class="title">STYLE FASHION</span>
-                                <span class="info">NEW BAG & STYLE FASHION</span>
-                            </div>
-                            <span class="btnBefore"></span>
-                            <span class="btnAfter"></span>
-                            <a class="main-portfolio-link" href="single-project.html"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="img">
-                        <img src="img/home-portfolio/img_8.jpg" alt="Portfolio Item">
-                        <div class="overlay-thumb">
-                            <a href="javascript:void(0)" class="like-product">
-                                <i class="ion-ios-heart-outline"></i>
-                                <span class="like-product">Liked</span>
-                                <span class="output">256</span>
-                            </a>
-                            <div class="details">
-                                <span class="title">STYLE FASHION</span>
-                                <span class="info">NEW BAG & STYLE FASHION</span>
-                            </div>
-                            <span class="btnBefore"></span>
-                            <span class="btnAfter"></span>
-                            <a class="main-portfolio-link" href="single-project.html"></a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
